fix scrollbar on grid

--- a/css/BugBashResultsView.scss
+++ b/css/BugBashResultsView.scss
@@ -21,6 +21,10 @@
         padding-right: 0;
         width: 75%;
 
+        .grid {
+            border: none;
+        }
+        
         .item-grid-cell {
             padding: 0;
             margin: 0;
